# monopoly

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
docs/: monopoly_spec.md
monopoly/: autoevolve.py  autotrain.py  bench.py  bots.py  data_loader.py  engine.py  features.py  io_utils.py  league.py  live.py  models.py  params.py  progress.py  roster.py  run_utils.py  sim.py  status.py  thinking.py  train.py  ui_app.py
monopoly/data/: board.yaml  cards_chance.yaml  cards_community.yaml  cards_texts_ru_official.yaml.template  rules.yaml  seeds.txt
monopoly/data/league/: best_20260128_090216_c001.json  best_20260128_115338_c003.json  best_20260128_134656_c004.json  best_20260128_151108_c005.json  best_20260128_171400_c006.json  best_20260129_064756_c008.json  best_20260129_110328_c011.json  best_20260130_071440_c001.json  best_20260130_073035_c002.json  best_20260130_090802_c003.json  best_20260130_094946_c005.json  best_20260130_101542_c006.json  best_20260130_105212_c007.json  bot_13664c75.json  bot_8523f187.json  bot_c54c14f7.json  index.json  last_best.json
tests/: test_auction_steps.py  test_autoevolve.py  test_autotrain_live.py  test_board.py  test_board_html.py  test_cards.py  test_cards_texts_template.py  test_context_features.py  test_economy.py  test_heatmap.py  test_league.py  test_liquidity.py  test_policy_features.py  test_progress.py  test_roster.py  test_rules.py  test_smoke.py  test_thinking_mode.py  test_trades.py  test_training.py  test_ui_import.py
