[project]
name = "monopoly"
version = "0.1.0"
description = "Monopoly bots vs bots with Streamlit spectator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.30",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
